# epitech_game_engine

./: .clang-format  .gitignore  CMakeLists.txt  Guidelines.md  compile_flags.txt  mainTestCollision.cpp  mainTestCollision2.cpp
demo/source/: Demo.cpp
engine/source/: Core.cpp  Core.hpp  Game.cpp  Game.hpp  GameHost.hpp  GameHostLoader.hpp  GameObject.cpp  main.cpp
engine/source/Audio/: AudioGroup.hpp  AudioListener.cpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  main.cpp
engine/source/Camera/: Camera.hpp
engine/source/Components/: Camera.hpp  Gravity.hpp  Light.hpp  Model.hpp  Movement.hpp  Physics.cpp  Physics.hpp  Transform.hpp
engine/source/ECS/: Admin.hpp  ClassId.hpp  ComponentIdRegister.cpp  ComponentIdRegister.hpp  Entity.hpp  ISystem.hpp  System.hpp  SystemIdRegister.cpp  SystemIdRegister.hpp  TypeId.hpp
engine/source/Extension/Language/: Keywords.hpp  Library.hpp  Platform.hpp
engine/source/Extension/Libraries/: Vulkan.hpp  WinApi.hpp  glm.hpp  stb_image.cpp  stb_image.h  tiny_obj_loader.cpp  tiny_obj_loader.h
engine/source/Global/: ApplicationBase.cpp  ApplicationBase.hpp
engine/source/Input/: Key.hpp  MouseButton.hpp  State.hpp
engine/source/Inputs/: Input.cpp  Input.hpp  Mouse.cpp
engine/source/Log/: Log.hpp
engine/source/Maths/: Math.hpp  Matrix.hpp  Quaternion.cpp  Vectors.hpp
engine/source/Model/: IModel.hpp  OBJ.cpp  OBJ.hpp
engine/source/Physics/: Collision.cpp  Collision.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ICollisionShape.hpp  PhysicsObject.hpp  ShapeType.hpp  Transform.cpp  Transform.hpp
engine/source/Physics/Shapes/: AABB.cpp  AABB.hpp  Capsule.cpp  Capsule.hpp  OBB.cpp  OBB.hpp  Raycasting.hpp  Sphere.cpp  Sphere.hpp
engine/source/Systems/: Gravity.cpp  Gravity.hpp  Physics.cpp  Physics.hpp
engine/source/Vulkan/: Buffer.cpp  Buffer.hpp  Drawable.cpp  Drawable.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  QueueFamilies.cpp  QueueFamilies.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainDetails.cpp  SwapchainDetails.hpp  UniformBufferData.hpp  Vertex.cpp  Vertex.hpp
engine/source/Windows/: Window.cpp  Window.hpp
resources/: gm_construct.mtl  gm_construct_block.mtl  gm_construct_grass.mtl
resources/music/: 17. Triage at Dawn.flac
shaders/: buildShaders.bat  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
source/: Core.cpp  Core.hpp  GameObject.cpp  GameObject.hpp  main.cpp  mainTestCollision.cpp
source/Audio/: AudioGroup.hpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  AudioStream.cpp  AudioStream.hpp  main.cpp
source/Global/: ApplicationBase.cpp  ThreadingTest.cpp  ThreadingTest.hpp
source/Inputs/: Input.cpp  Input.hpp  Key.cpp  Key.hpp  Mouse.hpp
source/Maths/: Matrix.hpp  Point3.hpp  Quaternion.cpp  Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vectors.hpp
source/Model/: AnimatedModel.cpp  AnimatedModel.hpp  IAnimatedModel.hpp  IModel.hpp  Model.cpp  Model.hpp  OBJ.cpp  OBJ.hpp
source/Model/Converter/: Assimp.cpp  Assimp.hpp
source/Physics/: AABB.hpp  Collision.cpp  Collision.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ICollisionShape.hpp  ICollisionSystem.hpp  PhysicsObject.cpp  PhysicsObject.hpp  Sphere.hpp  Transform.cpp  Transform.hpp
source/Physics/Shapes/: AABB.cpp  AABB.hpp  OBB.cpp  OBB.hpp  Sphere.cpp  Sphere.hpp
tmp/: CMakeLists.txt  compile_flags.txt
tmp/source/: mainTestCollision.cpp
